tools/flowc/tests/errors/error34.flow
CommonStyle ::= Style1, Style2;
    Style1 : ();
    Style2 : ();
MyStyle ::= CommonStyle, Style3;
    Style3 : ();

A : (
  styles : [MyStyle]
);

B : (
  styles : [CommonStyle]
);

getCommonStyles(styles : [CommonStyle], a : A, b : B) -> [[CommonStyle]] {
  [styles, a.styles, b.styles]
}

main() {

}
